--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 dist: trusty
 sudo: false
-
+ 
 language: node_js
 node_js:
-  - '8'
-
+  - "8"
+  
 addons:
   apt:
     sources:
       - google-chrome
     packages:
       - google-chrome-stable
-
+ 
 cache:
   directories:
-    - ./node_modules
-
+     - ./node_modules
+ 
 install:
   - npm install
-
+ 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
